js/js.translator/testData/incremental/invalidation/eagerInitialization/lib1/l2.0.kt
//@OptIn(kotlin.ExperimentalStdlibApi::class)
//@EagerInitialization
konst x = run { z1 = true; 42 }

//@OptIn(kotlin.ExperimentalStdlibApi::class)
//@EagerInitialization
konst y = run { z2 = true; 117 }
